<?xml version="1.0"?>
<package format="2">
  <name>control</name>
  <version>0.0.0</version>
  <description>Simple control node, that inputs "cone detections" and outputs array of points</description>
  <maintainer email="killasipilin@gmail.com">chentairan</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!--Other depends-->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>common_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>libwaypoint_follower</depend>

  <export>
  </export>
</package>
