<?xml version="1.0"?>
<package format='2'>
    <name>decision_making</name>
    <version>0.0.0</version>
    <description>Simple decision making node</description>
    <maintainer email="zbw0377@163.com">zhangbowei</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!--Other depends-->
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>common_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>autoware_msgs</depend>

    <export>
    </export>
</package>