<?xml version="1.0"?>
<package format="2">
  <name>cansend</name>
  <version>0.0.0</version>
  <description>Simple cansend node, that inputs "cone detections" and outputs array of points</description>
  <maintainer email="killasipilin@gmail.com">chentairan</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!--For custom message import-->
  <depend>can_msgs</depend>
  <!--Other depends-->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>autoware_msgs</depend>
  

  <export>
  </export>
</package>
