<?xml version="1.0"?>
<package>
    <name>points_preprocessor</name>
    <version>1.11.0</version>
    <description>The points_preprocessor package</description>

    <maintainer email="abrahammonrroy@yahoo.com">amc-nu</maintainer>
    <author email="n.patiphon@gmail.com">n-patiphon</author>
    <author email="akihito.ohsato@tier4.jp">aohsato</author>

    <license>Apache 2</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>build_flags</buildtool_depend>

    <build_depend>message_filters</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>yaml-cpp</build_depend>

    <run_depend>message_filters</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>yaml-cpp</run_depend>

    <export></export>
</package>
