<package format="2">
  <name>plauto_cognition_msgs</name>
  <version>0.1.0</version>
  <description>
    Unified interface message definitions for PLAUTO cognition modules
  </description>
  <license>BSD</license>
  <maintainer email="zyxin@umich.edu">Yuanxin Zhong</maintainer>
  <author email="zyxin@umich.edu">Yuanxin Zhong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>plauto_nav_msgs</build_depend>
  <build_depend>plauto_perception_msgs</build_depend>
  <build_depend>common_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>plauto_nav_msgs</exec_depend>
  <exec_depend>plauto_perception_msgs</exec_depend>
  <exec_depend>plauto_common</exec_depend>
  <exec_depend>common_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <export><architecture_independent/></export>
</package>