<?xml version="1.0"?>
<package format="2">
  <name>data_replayer</name>
  <version>0.0.0</version>
  <description>Simple data_replayer node, that inputs "cone detections" and outputs array of points</description>
  <maintainer email="killasipilin@gmail.com">chentairan</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!--For custom message import-->
  <depend>common_msgs</depend>

  <!--Other depends-->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libwaypoint_follower</depend>

  <export>
  </export>
</package>
