<package format="2">
  <name>plauto_common</name>
  <version>0.0.0</version>
  <description>common utils</description>
  <maintainer email="huiqian_li@outlook.com">lihuiqian</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>common_msgs</exec_depend>
  <export></export>
</package>
