<package format="2">
  <name>pose_reporter</name>
  <version>0.1.0</version>
  <description>
    Adapt odometry output to world coordinate
  </description>
  <license>BSD</license>
  <maintainer email="huiqian_li@outlook.com">Huiqian Li</maintainer>
  <author email="huiqian_li@outlook.com">Huiqian Li</author>

  <url type="website">https://github.com/cmpute/zzz</url>
  <url type="repository">https://github.com/cmpute/zzz</url>
  <url type="bugtracker">https://github.com/cmpute/zzz/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>common_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>plauto_nav_msgs</exec_depend>
  <export></export>
</package>
