<package format="2">
  <name>plauto_nav_msgs</name>
  <version>0.1.0</version>
  <description>
    Navigation msgs for PLAUTO
  </description>
  <license>BSD</license>
  <maintainer email="huiqian_li@outlook.com">Huiqian Li</maintainer>
  <author email="huiqian_li@outlook.com">Huiqian Li</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <export><architecture_independent/></export>
</package>